# 2x2macropad_protocol

./: Cargo.toml  README.md
src/: data_protocol.rs  hid_wrapper.rs  lib.rs  macro_protocol.rs
