[package]
name = "macropad_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = []

[dependencies]
strum_macros = "0.24"
strum = { version = "0.24", default-features = false, features = ["strum_macros", "derive"] }
packed_struct = { version = "0.10", default-features = false }

[dev-dependencies]
strum_macros = "0.24"
strum = { version = "0.24", default-features = false, features = ["strum_macros", "derive"] }
packed_struct = { version = "0.10", default-features = false }