[package]
name = "macropad_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = []
multi_versioned = ["multi_version", "semver"]

[dependencies]
strum_macros = "0.24"
strum = { version = "0.24", default-features = false, features = ["strum_macros", "derive"] }
packed_struct = { version = "0.10", default-features = false }
usbd-human-interface-device = "0.3.1"
num_enum = { version = "0.5.7", default-features = false }
multi_version = { git = "https://github.com/arfrie22/multi_version.git", optional = true }
semver = { version = "1.0", optional = true }


[dev-dependencies]
strum_macros = "0.24"
strum = { version = "0.24", default-features = false, features = ["strum_macros", "derive"] }
packed_struct = { version = "0.10", default-features = false }
usbd-human-interface-device = "0.3.1"
